<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="Accueil" />

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        android:title="Ajouter" />

    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_history"
        android:title="Historique" />

    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/ic_category"
        android:title="Catégories" />

    <!-- Lot 2 : Magasins remplace Paramètres (limite de 5 onglets Material).
         Réglages accessibles via l'icône en haut de l'Accueil. -->
    <item
        android:id="@+id/menu_stores"
        android:icon="@drawable/ic_store"
        android:title="Magasins" />

</menu>

